# ccs2-rs

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: doc-example.rs
examples/configs/: doc.ccs
src/: dag.rs  lib.rs  load_helper.rs  property_helper.rs  search.rs  tracer.rs
src/ast/: ccs2.pest  dnf.rs  formula.rs  mod.rs  parser.rs  property.rs  rule_tree.rs
tests/: file_loading.rs
tests/configs/imports/: circular1.ccs  circular2.ccs  imports_directory.ccs  in_context.ccs  multi_level.ccs  multiple_times.ccs  single_level.ccs
tests/configs/imports/subdir/: import1.ccs
