[package]
name = "ccs2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
indexmap = "2.11.4"
itertools = "0.14.0"
pest = "2.8"
pest_derive = { version = "2.8", features = ["grammar-extras"] }
petgraph = { version = "0.8", optional = true }
thiserror = "2.0.17"

[features]
dot = ["petgraph"]

[dev-dependencies]
pretty_assertions = "1.4.1"
